started delete method

--- a/src/main/resources/templates/songr/album.html
+++ b/src/main/resources/templates/songr/album.html
@@ -34,6 +34,11 @@
             <input type="submit" value="Add Album">
         </fieldset>
     </form>
+    <form action="/" th:method="delete">
+        <lable for="title">Delete by Album Title</lable>
+        <input type="text" name="title">
+        <input type="submit" value="Delete Album">
+    </form>
 
 </body>
 </html>
